Added cache to more about activity. Added link to artist site when click to main img on more about activity. Save json data to internal storage. Check if internet connection open.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.dravgames.vadim.musicartists" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -20,7 +21,9 @@
         </activity>
         <activity
             android:name=".MoreAbout"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity" >
+        </activity>
+        <activity android:name=".NoConnection" >
         </activity>
     </application>
 
